--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
     </div>
 
     </div>
-
+    
     <div id="msg-link" class="hide">
         <h2 id="final"></h2>
         <div><a href="./index.html">
                 <p id="link1">
-                    share a secret message</p>
-            </a></div>
+                    <b> Click here to share a secret message</b> </p>
+            </a></div> 
 
     </div>
 
